--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/portfolio/page.js", "app/portfolio/illustrations-and-digital-art/page.js", "app/[locale]/thank-you/page.tsx", "app/(thank-you)/layout.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/portfolio/page.js", "app/portfolio/illustrations-and-digital-art/page.js", "app/[locale]/thank-you/page.tsx", "app/(thank-you)/layout.js", "next.config.mjs"],
   "exclude": ["node_modules"]
 }
