--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-intl": "^3.17.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-lottie-player": "^2.1.0",
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
