--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^11.3.21",
     "next": "14.2.5",
     "next-intl": "^3.17.2",
+    "nextjs-current-url": "^1.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-lottie-player": "^2.1.0",
