--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^14.2.3",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.21",
     "next": "14.2.5",
